# PlayerDemo

./: README.md  Untitled Diagram.drawio  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/dabaicai/lylplayerdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/dabaicai/lylplayerdemo/: GL1Activity.java  MainActivity.java
app/src/main/java/com/dabaicai/lylplayerdemo/gl/: AirHockKeyRender.java  AirHockKeyRender05.java  AirHockKeyRender1.java  AirHockKeyRender2.java  AirHockKeyRender3.java  MatrixHelper.java  ReadResouceText.java  ShaderHelper.java
app/src/main/res/layout/: activity_gl1.xml  activity_main.xml
app/src/main/res/raw/: vertex_shader.glsl  vertex_shader2.glsl
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/dabaicai/lylplayerdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
mylibrary/src/androidTest/java/com/dabaicai/mylibrary/: ExampleInstrumentedTest.kt
mylibrary/src/main/: AndroidManifest.xml
mylibrary/src/test/java/com/dabaicai/mylibrary/: ExampleUnitTest.kt
video/: build.gradle
video/src/androidTest/java/com/dabaicai/video/: ExampleInstrumentedTest.java
video/src/main/: AndroidManifest.xml
video/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  Constant.h  FFmpegPlayer.cpp  FFmpegPlayer.h  JavaCallHelper.cpp  JavaCallHelper.h  VideoChannel.cpp  VideoChannel.h  lock_queue.h  native-lib.cpp
video/src/main/cpp/include/libavformat/: avformat.h
video/src/main/java/com/dabaicai/video/: GLPlayerActivity.java  MainActivity2.java  PlayerActivity.kt
video/src/main/java/com/dabaicai/video/ffmpeg/: PlayerControl.java  VideoControl.java
video/src/main/res/layout/: activity_glplayer.xml  activity_main2.xml  activity_player.xml
video/src/test/java/com/dabaicai/video/: ExampleUnitTest.java
